--- a/tools/ms/microsoft-graph-api-auth.html
+++ b/tools/ms/microsoft-graph-api-auth.html
@@ -38,8 +38,8 @@
                     </li>
                     <li>
                         <p>Switch to <code>API permissions</code> tab, add permissions you need.</p>
-                        <p>For OneDrive Index purpose, select following permssions: <code>offline_access</code>, <code>User.ReadBasic.All</code>,
-                            <code>Files.Read</code>, <code>Files.ReadWrite.All</code.</p>
+                        <p>For OneDrive Index purpose, select following permssions: <code>offline_access</code>,
+                            <code>User.Read</code>, <code>Files.ReadWrite.All</code.</p>
                         <p>&nbsp;</p>
                     </li>
 
@@ -56,7 +56,7 @@
                 </div>
                 <div class="input-field">
                     <input placeholder="offline_access User.ReadBasic.All Files.Read Files.ReadWrite.All" name="scope" type="text"
-                        value="offline_access User.ReadBasic.All Files.Read Files.ReadWrite.All">
+                        value="offline_access User.Read Files.ReadWrite.All">
                     <label for="scope">Scope</label>
                 </div>
                 <div class="input-field">
